# PMEF

./: .gitignore  .markdownlint.jsonc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE-APACHE  LICENSE-CC-BY  LICENSE-CC0  PMEF_CHANGELOG_v0.9.0-rc.docx  PMEF_Specification_v1.2.docx  README.md  ROADMAP.md  THIRD-PARTY-NOTICES.md  pmef-v0.9.0-rc-final.bundle.txt  pmef-v0.9.0-rc.bundle.txt  pmef.bundle  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_adapter.md  rfc.md
.github/workflows/: release.yml  stale.yml  validate-schemas.yml
catalogs/: README.md  caesarII-cii-mapping.json  flange-dimensions-en.json  flange-dimensions.json  instruments-common.json  materials-astm.json  materials-en.json  pipe-dimensions-en.json  pipe-dimensions.json  piping-class-a1a2.json  piping-class-b3c1.json  piping-class-c5d1.json  piping-class-en-p1a.json  profiles-aisc-extended.json  profiles-aisc.json  profiles-en-extended.json  profiles-en.json  rdl-uri-map.json
diagrams/: 01-overview.md  02-piping-detail.md  03-equipment-detail.md  04-ei-detail.md  04b-relationships.md  05-steel-detail.md  06-geometry-layers.md
docs/: adapter-overview.html  design-decisions.md  getting-started.md  iso15926-mapping.md
examples/: compressor-train.ndjson  ei-loop-fic-10101.ndjson  heat-exchanger-station.ndjson  pump-skid-complete.ndjson  stress-model-cw201.ndjson
pmef-comos-dotnet/: PmefComos.csproj  README.md
pmef-comos-dotnet/src/: ComosExporter.cs
pmef-creo-toolkit/: README.md
pmef-creo-toolkit/src/: CreoExporter.c
pmef-dotnet-adapters/src/: PmefDotNetAdapters.cs
pmef-inventor-addin/: PmefInventor.csproj  README.md
pmef-inventor-addin/src/: InventorExporter.cs
pmef-plant3d-dotnet/: PmefPlant3d.csproj  README.md
pmef-plant3d-dotnet/src/: PlantExporter.cs
pmef-rs/: Cargo.toml
pmef-rs/pmef-adapter-advanced-steel/: Cargo.toml
pmef-rs/pmef-adapter-advanced-steel/src/: lib.rs
pmef-rs/pmef-adapter-cadmatic/: Cargo.toml
pmef-rs/pmef-adapter-cadmatic/src/: api.rs  client.rs  config.rs  lib.rs  mapping.rs
pmef-rs/pmef-adapter-comos/: Cargo.toml
pmef-rs/pmef-adapter-comos/src/: export_schema.rs  lib.rs  mapping.rs
pmef-rs/pmef-adapter-creo/: Cargo.toml
pmef-rs/pmef-adapter-creo/src/: export_schema.rs  lib.rs  step.rs
pmef-rs/pmef-adapter-e3d/: Cargo.toml
pmef-rs/pmef-adapter-e3d/src/: lib.rs  mapping.rs  pml.rs  rvm.rs
pmef-rs/pmef-adapter-inventor/: Cargo.toml
pmef-rs/pmef-adapter-inventor/src/: export_schema.rs  lib.rs
pmef-rs/pmef-adapter-navisworks/: Cargo.toml
pmef-rs/pmef-adapter-navisworks/src/: lib.rs
pmef-rs/pmef-adapter-plant3d/: Cargo.toml
pmef-rs/pmef-adapter-plant3d/src/: equipment.rs  idf.rs  lib.rs
pmef-rs/pmef-adapter-revit/: Cargo.toml
pmef-rs/pmef-adapter-revit/src/: export_schema.rs  lib.rs
pmef-rs/pmef-adapter-tekla/: Cargo.toml
pmef-rs/pmef-adapter-tekla/src/: export_schema.rs  lib.rs  profile_map.rs
pmef-rs/pmef-cli/: Cargo.toml
pmef-rs/pmef-cli/src/: main.rs
pmef-rs/pmef-core/: Cargo.toml
pmef-rs/pmef-core/src/: catalog.rs  ei.rs  equipment.rs  geometry.rs  lib.rs  piping.rs  plant.rs  relationships.rs  revision.rs  steel.rs  traits.rs  types.rs
pmef-rs/pmef-geom/: Cargo.toml
pmef-rs/pmef-geom/src/: lib.rs
pmef-rs/pmef-io/: Cargo.toml
pmef-rs/pmef-io/src/: lib.rs
pmef-rs/pmef-validate/: Cargo.toml
pmef-rs/pmef-validate/src/: lib.rs
pmef-tekla-dotnet/: PmefTekla.csproj  README.md
pmef-tekla-dotnet/src/: PmefExporter.cs  PmefImporter.cs
schemas/: pmef-base.schema.json  pmef-catalog.schema.json  pmef-ei.schema.json  pmef-equipment.schema.json  pmef-geometry.schema.json  pmef-hierarchy.schema.json  pmef-piping-component.schema.json  pmef-property-sets.schema.json  pmef-relationships.schema.json  pmef-steel.schema.json
scripts/: bundle-schemas.py  check-ndjson-format.py  check-schema-ids.py  extract-changelog.py  extract-mermaid.py  validate-examples.py  validate-schemas.py
spec/: 01-introduction.md  02-information-model.md  03-serialisation.md  04-geometry.md  05-adapters.md  06-conformance.md
