[package]
name        = "pmef-adapter-advanced-steel"
description = "PMEF adapter for Autodesk Advanced Steel"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
anyhow.workspace     = true
tokio.workspace      = true
tracing.workspace    = true
pmef-core.workspace  = true
pmef-io.workspace    = true
pmef-validate.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
