[package]
name        = "pmef-adapter-e3d"
description = "PMEF adapter for AVEVA E3D Plant Design — PML + RVM"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
anyhow.workspace     = true
tokio.workspace      = true
tracing.workspace    = true
pmef-core.workspace  = true
pmef-io.workspace    = true
pmef-validate.workspace = true

# For RVM binary parsing
byteorder = "1"
# For E3D database address parsing
regex     = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
