[package]
name = "pmef-adapter-plant3d"
description = "PMEF adapter for AutoCAD Plant 3D"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
pmef-core.workspace = true
pmef-io.workspace = true
pmef-validate.workspace = true
