[package]
name = "pmef-cli"
description = "PMEF command-line tool"
version.workspace = true
edition.workspace = true
license.workspace = true
[[bin]]
name = "pmef"
path = "src/main.rs"
[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pmef-core.workspace = true
pmef-io.workspace = true
pmef-validate.workspace = true
